--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
           <button class=”btn btn-success”>Success</button>
           <button class=”btn btn-danger”>Danger</button>
       </div>
+      <div>
+          <img src="https://storage.googleapis.com/smartninja-org-assets/curriculums/wd1/img/big-ninja.png" class="img-responsive">
+      </div>
   </body>
 </html>
