--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Mirko Hairdresser</title>
 
     <!-- Bootstrap CSS -->
     
@@ -15,7 +15,32 @@
 
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      <h4>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">                 
+                  <a class="navbar-brand" href="#">Mirko Hairdresser</a>
+                </div>            
+               <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Kaj nudimo</a></li>
+                    <li><a href="#">Naroči se</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">O nas</a></li>
+                    <div class="col-md-5 pull-right">  
+                        <form class="navbar-form" role="search">
+                            <div class="input-group">
+                                <input type="text" class="form-control" aria-label="...">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>  
+                        </form>
+                    </div>
+                </ul>
+            </div>
+        </nav>    
+      </h4>
+            <div class="btn-group">
       <div>
           <button class=”btn btn-default”>Default</button>
           <button class=”btn btn-primary”>Primary</button>
@@ -24,7 +49,11 @@
           <button class=”btn btn-danger”>Danger</button>
       </div>
       <div>
-          <img src="https://storage.googleapis.com/smartninja-org-assets/curriculums/wd1/img/big-ninja.png" class="img-responsive">
+         <!-- <img src="https://storage.googleapis.com/smartninja-org-assets/curriculums/wd1/img/big-ninja.png" class="img-responsive"> -->
       </div>
+      <div>
+        <!--  <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
+      </div>
+          </div>
   </body>
 </html>
