--- a/index.html
+++ b/index.html
@@ -80,21 +80,98 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-      </div>
-            <div class="btn-group">
-      <div>
-          <button class=”btn btn-default”>Default</button>
-          <button class=”btn btn-primary”>Primary</button>
-          <button class=”btn btn-info”>Info</button>
-          <button class=”btn btn-success”>Success</button>
-          <button class=”btn btn-danger”>Danger</button>
-      </div>
-      <div>
-         <!-- <img src="https://storage.googleapis.com/smartninja-org-assets/curriculums/wd1/img/big-ninja.png" class="img-responsive"> -->
-      </div>
-      <div>
-        <!--  <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
-      </div>
+    <div>
+        <h2 align="center">
+            Kaj nudimo
+        </h2>     
+    </div>
+    <div>
+        <h2 align="center">
+            Naroči se
+        </h2>  
+        <div class="container">
+            <div class="col-md-4 pull-left">
+                 <br>
+                 <div class="form-group">
+                    <label for="name">Ime:</label>
+                    <input type="text" class="form-control" id="name">
+                 </div>
+                 <div class="form-group">
+                    <label for="lastname">Priimek:</label>
+                    <input type="text" class="form-control" id="lastname">
+                 </div>
+                 <div class="form-group">
+                    <label for="date">Termin:</label>
+                    <input type="text" class="form-control" id="date">
+                 </div>
+                 <div class="form-group">
+                    <label for="comment">Ostalo(želje glede pričeske itd.):</label>
+                    <textarea class="form-control" rows="3" id="comment"></textarea>
+                </div> 
+                <input type="checkbox" id="checkbox1" class="checkbox style-2 " checked="checked"/>                           
+                <div>
+                    Strinjam se, da je Mirko najboljši frizer.
+                </div>  
+                <div>
+                    <button type="button" class="btn btn-primary btn-md pull-right">Pošlji</button>
+                </div>
+            </div>
+            <div class="col-md-6 pull-right">  
+               <br>
+               <br>
+                <table class="table table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Dan</th>
+                        <th>Delovne ure</th>               
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Ponedeljek</td>
+                        <td>8:00-16:00</td>
+                      </tr>
+                      <tr>
+                        <td>Torek</td>
+                        <td>10:00-18:00</td>
+                      </tr>
+                      <tr>
+                        <td>Sreda</td>
+                        <td>8:00-16:00</td>
+                      </tr>
+                      <tr>
+                        <td>Četrtek</td>
+                        <td>8:00-16:00</td>
+                      </tr>
+                      <tr>
+                        <td>Petek</td>
+                        <td>12:00-20:00</td>
+                      </tr>
+                      <tr>
+                        <td>Sobota</td>
+                        <td>8:00-16:00</td>
+                      </tr>
+                      <tr>
+                        <td>Nedelja</td>
+                        <td>8:00-12:00</td>
+                      </tr>
+                    </tbody>
+                </table>
+                <div>
+                    *Ob praznikih velja nedeljski urnik
+                </div>
+            </div>
+        </div>
+    </div>
+          <br>
+    <div>
+        <h2 align="center">
+            FAQ(Pogosta vprašanja)
+        </h2>     
+    </div>
+    <div>
+    <!--  <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
+    </div>
           </div>
   </body>
 </html>
