--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             Naroči se
         </h2>  
         <div class="container">
-            <div class="col-md-5 pull-left">
+            <div class="col-lg-5 pull-left">
                  <br>
                  <div class="form-group">
                     <label for="name">Ime:</label>
@@ -111,18 +111,18 @@
                     <textarea class="form-control" rows="3" id="comment"></textarea>
                 </div> 
                 <div class="row">
-                    <div class="col-md-10">                           
+                    <div class="col-lg-10">                           
                         <div>
                             Strinjam se, da je Mirko najboljši frizer.
                         </div>  
                          <input type="checkbox" id="checkbox1" class="checkbox style-2 " checked="checked"/> 
                     </div>                     
-                    <div class="col-md-2 pull-right">
+                    <div class="col-lg-2 pull-right">
                         <button type="button" class="btn btn-primary btn-md pull-right">Pošlji</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 pull-right">  
+            <div class="col-lg-6 pull-right">  
                <br>
                <br>
                 <table class="table table-bordered">
@@ -220,8 +220,29 @@
           </div>
         </div>
     </div>
-    <div>
-    <!--  <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
+          
+    <div class="row">
+        <div class="col-lg-5">
+            <h4>Kontakt</h4>
+            <div>Frizer Mirko s.p.</div>
+            <div>Davčna št.: 32432434</div>
+            <div>Frizerska ulica 5,1000 Ljubljana</div>
+            <div>Tel.: 01/34543546</div>
+            <div>Email:frizer.mirko@f-mirko.com</div>    
+            <br>
+        </div>
+        <div class="col-lg-2">
+                <a class="thumbnail">
+                    <img src="images/mh_logo_final_1.jpg" class="img-rounded" class="img-responsive" style="width:150px;height:150px">
+                </a> 
+        </div>
+        <div class="col-lg-2 pull-right">
+            <h4>Navigacija</h4>
+            <div>Kaj nudimo</div>
+            <div>Naroči se</div>
+            <div>Pogosta vprašanja</div>
+            <div>O nas</div>    
+        </div>
     </div>
           </div>
   </body>
