--- a/index.html
+++ b/index.html
@@ -50,37 +50,38 @@
       </h4>
       <br>
       <div class="container">
-      <br>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    <!--    <li data-target="#myCarousel" data-slide-to="3"></li>-->
-      </ol>
+          <br>
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        <!--    <li data-target="#myCarousel" data-slide-to="3"></li>-->
+          </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="images/hair1.jpg" class="img-rounded" class="img-responsive">
-        </div>
-        <div class="item">
-          <img src="images/hair2.jpg" class="img-rounded" class="img-responsive">
-        </div>
-        <div class="item">
-          <img src="images/hair3.jpg"  class="img-rounded" class="img-responsive">
-        </div>
-      </div>
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="images/hair1.jpg" class="img-rounded" class="img-responsive">
+            </div>
+            <div class="item">
+              <img src="images/hair2.jpg" class="img-rounded" class="img-responsive">
+            </div>
+            <div class="item">
+              <img src="images/hair3.jpg"  class="img-rounded" class="img-responsive">
+            </div>
+          </div>
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>  
     </div>
     <div>
         <h2 align="center">
@@ -173,8 +174,10 @@
     <div>
         <h2 align="center">
             FAQ(Pogosta vprašanja)
-        </h2>     
+        </h2> 
+    </div>
         <br>
+    <div class="container">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
@@ -218,32 +221,32 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>  
     </div>
-          
-    <div class="row">
-        <div class="col-lg-5">
-            <h4>Kontakt</h4>
-            <div>Frizer Mirko s.p.</div>
-            <div>Davčna št.: 32432434</div>
-            <div>Frizerska ulica 5,1000 Ljubljana</div>
-            <div>Tel.: 01/34543546</div>
-            <div>Email:frizer.mirko@f-mirko.com</div>    
-            <br>
-        </div>
-        <div class="col-lg-2">
+    <div class="container">  
+        <div class="row">
+            <div class="col-md-5">
+                <h4>Kontakt</h4>
+                <div>Frizer Mirko s.p.</div>
+                <div>Davčna št.: 32432434</div>
+                <div>Frizerska ulica 5,1000 Ljubljana</div>
+                <div>Tel.: 01/34543546</div>
+                <div>Email:frizer.mirko@f-mirko.com</div>    
+                <br>
+            </div>
+            <div class="col-md-2">
                 <a class="thumbnail">
                     <img src="images/mh_logo_final_1.jpg" class="img-rounded" class="img-responsive" style="width:150px;height:150px">
                 </a> 
+            </div>
+            <div class="col-md-2 pull-right">
+                <h4>Navigacija</h4>
+                <div>Kaj nudimo</div>
+                <div>Naroči se</div>
+                <div>Pogosta vprašanja</div>
+                <div>O nas</div>    
+            </div>
         </div>
-        <div class="col-lg-2 pull-right">
-            <h4>Navigacija</h4>
-            <div>Kaj nudimo</div>
-            <div>Naroči se</div>
-            <div>Pogosta vprašanja</div>
-            <div>O nas</div>    
-        </div>
-    </div>
-          </div>
+    </div>    
   </body>
 </html>
